--- a/index.html
+++ b/index.html
@@ -22,23 +22,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--llamar ccs  -->
-    <link rel="stylesheet" href="./estilos/estilos.css">
+    <link rel="stylesheet" href="./estilos/main.css">
     <!-- TITULO DE LA PAGINA -->
     <title>PRINCIPAL</title>
 </head>
 
 <!-- TODO EL CONTENIDO DEL SITIO -->
 
-<body>
-    
+<body>    
     <header class="animate__animated animate__backInLeft">
         <div class="logo">
             <img src="./multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
             <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
         </div>
-
-        <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
-            <div class="container-fluid">
+    
+    <nav  class="menuPrincipal navbar navbar-expand-md navbar-light">
+        <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -66,21 +65,12 @@
                 </div>
             </div>
         </nav>
-        <!-- <nav class="menuPrincipal">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="./paginas/adopcion.html">Adopcion</a></li>
-                <li><a href="./paginas/preguntas frecuentes.html">Preguntas Frecuentes</a></li>
-                <li><a href="./paginas/nosotros.html">Nosotros</a></li>
-                <li><a href="./paginas/contacto.html">Contacto</a></li>
-            </ul>
-        </nav> -->
 
     </header>
 
     <main>
 
-        <div class="imagenIndex">
+        <div>
             <img src="./multimedia/Portada Facebook Perro con gafas.jpg" alt="imagenprincipal" class="imagen1">
         </div>
         <div>
