--- a/paginas/adopcion.html
+++ b/paginas/adopcion.html
@@ -3,172 +3,188 @@
 
 
 <head>
-    <!-- CARARACTERES ESPECIALES  Ñ Y TILDES -->
-    <meta charset="UTF-8">
-    <!-- COMPATIBILIDAD CON IE Y EDGE -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- APTACION A CELULAR -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- ESTILO DE LETRA ENCABEZADO-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <!-- LOGO DE PESTAÑA -->
-    <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
-    <!-- ANIMACION HEADER -->
-    <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <!-- BOOTSTRAP LINK-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  <!-- CARARACTERES ESPECIALES  Ñ Y TILDES -->
+  <meta charset="UTF-8">
+  <!-- COMPATIBILIDAD CON IE Y EDGE -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- APTACION A CELULAR -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- ESTILO DE LETRA ENCABEZADO-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <!-- LOGO DE PESTAÑA -->
+  <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
+  <!-- ANIMACION HEADER -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- BOOTSTRAP LINK-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!--llamar ccs  -->
-    <link rel="stylesheet" href="../estilos/estilos.css">
-    <!-- TITULO DE LA PAGINA -->
-    <title>ADOPCION</title>
+  <!--llamar ccs  -->
+  <link rel="stylesheet" href="/estilos/main.css">
+  <!-- TITULO DE LA PAGINA -->
+  <title>ADOPCION</title>
 </head>
 
 <!-- TODO EL CONTENIDO DEL SITIO -->
 
 <body>
 
-    <header class="animate__animated animate__backInLeft">
-        <div class="logo">
-            <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
-            <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
-        </div>
+  <header class="animate__animated animate__backInLeft">
+    <div class="logo">
+      <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
+      <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
+    </div>
 
     <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="./adopcion.html">Adopcion</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="./preguntas frecuentes.html">Preguntas
-                        Frecuentes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="./nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="./contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./adopcion.html">Adopcion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./preguntas frecuentes.html">Preguntas
+                Frecuentes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
-    </header>
+  </header>
 
-    <main>
+  <main class="container-fluid">
+    <section class="d-flex flex-wrap col-12 justify-content-center ">
+      <div class="card m-4" style="width: 18rem;">
+        <img src="../multimedia/pexels-kat-smith-551628.jpg" class="card-img-top" alt="perro1">
+        <div class="card-body bg-yellow">
+          <h5 class="card-title">ROGELIO</h5>
+          <p class="card-text">Corre Como Loco, Hermoso.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Nombre: Rogelio</li>
+          <li class="list-group-item">Edad: Un Año</li>
+          <li class="list-group-item">Raza: Colin</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">SOY TUYO</a>
+        </div>
+      </div>
 
+      <div class="card m-4" style="width: 18rem;">
+        <img src="../multimedia/pexels-pixabay-160846.jpg" class="card-img-top" alt="perro2">
+        <div class="card-body">
+          <h5 class="card-title">COKY</h5>
+          <p class="card-text">Energico, Atento, Un Gran Compañero.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Nombre: Coky</li>
+          <li class="list-group-item">Edad: 6 Años</li>
+          <li class="list-group-item">Raza: Bull Dog Frances</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">SOY TUYO</a>
 
-        <section class="perrosAdopcion">
+        </div>
+      </div>
 
-            <article>
-                <div> 
-                    <img src="../multimedia/pexels-kat-smith-551628.jpg" alt="perro1" class="PerroImagen">
-                </div>
-                <div>
-                    <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores, optio blanditiis enim
-                        voluptates dicta omnis, ipsam ad eos odio cumque natus, eum nisi impedit pariatur reprehenderit
-                        alias aliquid dolorem velit.
-                    </p>
-                </div>
-            </article>
+      <div class="card m-4" style="width: 18rem;">
+        <img src="../multimedia/pexels-pixabay-235805.jpg" class="card-img-top" alt="perro3">
+        <div class="card-body">
+          <h5 class="card-title">FIRULAIS</h5>
+          <p class="card-text">Jugueton, Educado, Emable.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Nombre: Firulais</li>
+          <li class="list-group-item">Edad: 3 Años</li>
+          <li class="list-group-item">Raza: Mestizo</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">SOY TUYO</a>
 
-            <article>
-                <div>
-                    <img src="../multimedia/pexels-pixabay-160846.jpg" alt="perro2" class="PerroImagen">
-                </div>
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati perferendis quo molestias
-                        explicabo voluptatum cum illum eligendi adipisci nisi inventore quis rerum tempora quam mollitia
-                        nobis ut doloremque, ex numquam!
-                    </p>
-                </div>
-            </article>
+        </div>
+      </div>
+      <div class="card m-4" style="width: 18rem;">
+        <img src="../multimedia/pexels-pixabay-39317.jpg" class="card-img-top" alt="perro4">
+        <div class="card-body">
+          <h5 class="card-title">VERTULIO</h5>
+          <p class="card-text">Un Nene hermoso.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Nombre: Vertulio</li>
+          <li class="list-group-item">Edad: Un Mes</li>
+          <li class="list-group-item">Raza: Mestizo</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">SOY TUYO</a>
 
-            <article>
-                <div>
-                    <img src="../multimedia/pexels-pixabay-235805.jpg" alt="perro3" class="PerroImagen">
-                </div>
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore nostrum repellendus accusamus
-                        unde autem nesciunt rem, delectus temporibus sequi omnis nisi sunt tempora ut eaque quaerat quae
-                        quos commodi dignissimos!
-                    </p>
-                </div>
-            </article>
+        </div>
+      </div>
 
-            <article>
-                <div>
-                    <img src="../multimedia/pexels-pixabay-39317.jpg" alt="perro4" class="PerroImagen">
-                </div>
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, voluptates quam quia esse
-                        repellat reiciendis soluta maxime consequuntur numquam nam ex, molestiae, facere eveniet rerum
-                        quod excepturi atque? Vero, omnis!
-                    </p>
-                </div>
-            </article>
+      <div class="card m-4" style="width: 18rem;">
+        <img src="../multimedia/pexels-pixabay-59965.jpg" class="card-img-top" alt="perro5">
+        <div class="card-body">
+          <h5 class="card-title">CODY</h5>
+          <p class="card-text">Una Nena hermosa, Ronca. </p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Nombre: Cody</li>
+          <li class="list-group-item">Edad: 2 meses</li>
+          <li class="list-group-item">Raza: Mestizo</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">SOY TUYO</a>
+        </div>
+      </div>
 
-            <article>
-                <div>
-                    <img src="../multimedia/pexels-pixabay-59965.jpg" alt="perro5" class="PerroImagen">
-                </div>
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident veniam tempora beatae. Labore
-                        mollitia minus nihil dolore corrupti molestias asperiores, ipsum atque sunt facere deserunt
-                        quaerat quia beatae cum architecto.
-                    </p>
-                </div>
-            </article>
+      <div class="card m-4" style="width: 18rem;">
+        <img src="../multimedia/pexels-torsten-dettlaff-59523.jpg" class="card-img-top" alt="perro5">
+        <div class="card-body">
+          <h5 class="card-title">GRUÑON</h5>
+          <p class="card-text">Caracter, Temperamento, y Jugueton.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Nombre: Gruñon</li>
+          <li class="list-group-item">Edad: 2 Meses </li>
+          <li class="list-group-item">Raza: Mestizo</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">SOY TUYO</a>
 
-            <article>
-                <div>
-                    <img src="../multimedia/pexels-torsten-dettlaff-59523.jpg" alt="perro6" class="PerroImagen">
-                </div>
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo corrupti reiciendis delectus
-                        voluptate odit similique fugit, vitae expedita deserunt voluptatum repudiandae repellat. Alias,
-                        atque assumenda! Eveniet quasi labore id quibusdam!
-                    </p>
-                </div>
-            </article>
+        </div>
+      </div>
+    </section>
 
-        </section>
+  </main>
+  <footer>
 
-    </main>
-    <footer>
-
-        <p class="piedePagina">
-            Derechos Reservados |Términos y condiciones|
-            Aviso de Privacidad
-            |Política de ADOPTAME sobre Cookies
-            |Términos y condiciones | Copyright.
-            CUIDAMOS MASCOTAS
-        </p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    <p class="piedePagina">
+      Derechos Reservados |Términos y condiciones|
+      Aviso de Privacidad
+      |Política de ADOPTAME sobre Cookies
+      |Términos y condiciones | Copyright.
+      CUIDAMOS MASCOTAS
+    </p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-</script>
+  </script>
 </body>
 
 </html>
