--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 
-
-
 <head>
-    <!-- CARARACTERES ESPECIALES  Ñ Y TILDES -->
-    <meta charset="UTF-8">
-    <!-- COMPATIBILIDAD CON IE Y EDGE -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- APTACION A CELULAR -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- ESTILO DE LETRA ENCABEZADO-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <!-- LOGO DE PESTAÑA -->
-    <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
-    <!-- ANIMACION HEADER -->
-    <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <!-- BOOTSTRAP LINK-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!--llamar ccs  -->
-    <link rel="stylesheet" href="../estilos/estilos.css">
-    <!-- TITULO DE LA PAGINA -->
-    <title>CONTACTO</title>
+  <!-- CARARACTERES ESPECIALES  Ñ Y TILDES -->
+  <meta charset="UTF-8">
+  <!-- COMPATIBILIDAD CON IE Y EDGE -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- APTACION A CELULAR -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- ESTILO DE LETRA ENCABEZADO-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <!-- LOGO DE PESTAÑA -->
+  <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
+  <!-- ANIMACION HEADER -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- BOOTSTRAP LINK-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!--llamar ccs  -->
+  <link rel="stylesheet" href="/estilos/main.css">
+  <!-- TITULO DE LA PAGINA -->
+  <title>CONTACTO</title>
 </head>
 
 <!-- TODO EL CONTENIDO DEL SITIO -->
@@ -31,106 +30,92 @@
 <body>
 
 
-    <header class="animate__animated animate__backInLeft">
-        <div class="logo">
-            <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
-            <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
+  <header class="animate__animated animate__backInLeft">
+    <div class="logo">
+      <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
+      <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
+    </div>
+
+    <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../paginas/adopcion.html">Adopcion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../paginas/preguntas frecuentes.html">Preguntas
+                Frecuentes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../paginas/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../paginas/contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
+      </div>
+    </nav>
+  </header>
 
-        <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../paginas/adopcion.html">Adopcion</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../paginas/preguntas frecuentes.html">Preguntas
-                            Frecuentes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../paginas/nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../paginas/contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <main class="mainContacto">
-        <form class="row g-3">
-
-            <div class="row g-3">
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
-                </div>
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
-                </div>
-              </div>
-
-            <div class="col-md-6">
-              <label for="inputEmail4" class="form-label">Email</label>
-              <input type="email" class="form-control" id="inputEmail4">
-            </div>
-            <div class="col-md-6">
-              <label for="inputPassword4" class="form-label">Password</label>
-              <input type="password" class="form-control" id="inputPassword4">
-            </div>
-            <div class="col-md-6">
-              <label for="inputCity" class="form-label">Ciudad</label>
-              <input type="text" class="form-control" id="inputCity">
-            </div>
-            <div class="col-md-4">
-              <label for="inputState" class="form-label">Pais</label>
-              <select id="inputState" class="form-select">
-                <option selected>Seleccionar</option>
-                <option>Argentina</option>
-                <option>Chile</option>
-                <option>Peru</option>
-                <option>Venezuela</option>
-              </select>
-            </div>           
-            <div class="col-12">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
-                <label class="form-check-label" for="gridCheck">
-                    Acepto Terminos y Condiciones
-                </label>
-              </div>
-            </div>
-            <div class="col-12">
+  <main class="mainContacto d-flex justify-content-center">
+    <form class="row g-3 m-2">
+      <div class="row g-3 d-flex justify-items-center flex-column">
+        <div class="col">
+          <label for="text">Nombre</label>
+          <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
+          <label for="tex">Apellido</label>
+          <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
+          <label for="inputEmail4" class="form-label">Email</label>
+          <input type="email" class="form-control" id="inputEmail4">
+          <label for="inputPassword4" class="form-label">Password</label>
+          <input type="password" class="form-control" id="inputPassword4">
+          <label for="inputCity" class="form-label">Ciudad</label>
+          <input type="text" class="form-control" id="inputCity">
+          <label for="inputState" class="form-label">Pais</label>
+          <select id="inputState" class="form-select">
+            <option selected>Seleccionar</option>
+            <option>Argentina</option>
+            <option>Chile</option>
+            <option>Peru</option>
+            <option>Venezuela</option>
+          </select>
+          <div class="d-flex">
+            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <label class="form-check-label" for="gridCheck">
+              Acepto Terminos y Condiciones
+            </label>
+          </div>
+            <div>
               <button type="submit" class="btn btn-primary">Enviar</button>
               <button type="reset" class="btn btn-primary">Restablecer</button>
             </div>
-        </form>
-    </main>
-    <footer>
-
-        <p class="piedePagina">
-            Derechos Reservados |Términos y condiciones|
-            Aviso de Privacidad
-            |Política de ADOPTAME sobre Cookies
-            |Términos y condiciones | Copyright.
-            CUIDAMOS MASCOTAS
-        </p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+          </div>
+    </form>
+  </main>
+  <footer>
+    <p class="piedePagina">
+      Derechos Reservados |Términos y condiciones|
+      Aviso de Privacidad
+      |Política de ADOPTAME sobre Cookies
+      |Términos y condiciones | Copyright.
+      CUIDAMOS MASCOTAS
+    </p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-</script>
+  </script>
 
 </body>
 
