--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -20,7 +20,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--llamar ccs  -->
-    <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="/estilos/main.css">
     <!-- TITULO DE LA PAGINA -->
     <title>CONTACTO</title>
 
@@ -30,7 +30,7 @@
 <body>
 
     <header class="animate__animated animate__backInLeft">
-        <div class="logo">
+        <div class="logo"> 
             <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
             <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
         </div>
