--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header class="container-fluid animate__animated animate__backInLeft">
         <div class="container">
             <div class="row">
-                <a href="../index.html">
+                <a href="./index.html">
                     <img class="img" src="./multimedia/glow.png" alt="logo-pagina"></a>
             </div>
         </div>
