--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -54,7 +54,7 @@
       </nav>
     </div>
   </header>
-  <main class="mainContacto d-flex justify-content-center">
+  <main class="d-flex justify-content-center mainContacto">
     <form class="row g-3 m-2">
       <div class="row g-3 d-flex justify-items-center flex-column">
         <div class="col">
